# TicTacToe

./: .eslintrc.js  .gitignore  .golangci.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  _typos.toml  eslint.config.js  index.html  package.json  script.js  style.css  tictactoe.cpp  tictactoe.h  tictactoe_python.py  tictactoe_test.cpp
.github/: dependabot.yml  java.yaml
.github/workflows/: ada.yaml  analog_polarization_WZ.yaml  assembly.yaml  bash.yaml  basic.yaml  brainfuck.yaml  build.yaml  build_cpp.yaml  build_python.yaml  c.yaml  carbon.yaml  chef.yaml  clojure.yaml  clojurescript.yaml  cobol.yaml  coffeescript.yaml  common-lisp.yaml  cpp.yaml  crystal.yaml  csharp.yaml  d.yaml  dart.yaml  deploy.yaml  dreamberd.yaml  eiffel.yaml  elixir.yaml  elm.yaml  erlang.yaml  fortran.yaml  fsharp.yaml  generic.yaml  go.yaml  haskell.yaml  intercal.yaml  java.yaml  javascript.yaml  julia.yaml  kotlin.yaml  lua.yaml  mojo.yaml  (+17 more)
docs/: index.html
src/: main.cpp
tests/: test_tictactoe.py
tictactoe_ada/: alire.toml  tictactoe_ada.gpr
tictactoe_ada/alire/: alire.lock.prev  alire.toml.prev  config.toml
tictactoe_ada/config/: tictactoe_ada_config.ads  tictactoe_ada_config.gpr  tictactoe_ada_config.h
tictactoe_ada/src/: game.adb  game.ads  tictactoe_ada.adb
tictactoe_ada/tests/: alire.toml
tictactoe_assembly/: Makefile  tictactoe.asm
tictactoe_bash/: tictactoe_bash.sh
tictactoe_basic/: tictactoe_basic.bas
tictactoe_brainfuck/: tictactoe.bf
tictactoe_c/: .clang-tidy  Makefile  main.c  setup.py  tictactoe_c.py
tictactoe_c/include/: tictactoe.h
tictactoe_c/python_ext/: .clang-tidy  tictactoe_py.c
tictactoe_c/src/: main.c  tictactoe.c
tictactoe_c/tictactoe_c/: tictactoe_c.pyi  tictactoe_py.c
tictactoe_carbon/: .gitignore  tictactoe_carbon.carbon
tictactoe_chef/: input2.txt  tictactoe.chef
tictactoe_clojure/: tictactoe.clj
tictactoe_clojurescript/: build.edn  deps.edn  index.html
tictactoe_cobol/: input.txt  tictactoe_cobol.cob
tictactoe_coffeescript/: tictactoe.coffee
tictactoe_common-lisp/: packages.lisp  run-tests.lisp  tictactoe_common-lisp-test.asd  tictactoe_common-lisp.asd  tictactoe_common-lisp.lisp
tictactoe_common-lisp/src/: tictactoe_common-lisp.lisp
tictactoe_common-lisp/t/: tictactoe_common-lisp-test.lisp
tictactoe_cpp/: .clang-format  CMakeLists.txt
tictactoe_cpp/include/: Random.hpp  tictactoe.h  tictactoe.hpp
tictactoe_cpp/src/: main.cpp  tictactoe.cpp
tictactoe_cpp/tests/: tictactoe_test.cpp
tictactoe_crystal/: LICENSE  README.md  shard.yml
tictactoe_crystal/spec/: spec_helper.cr  tictactoe_crystal_spec.cr
tictactoe_crystal/src/: tictactoe_crystal.cr  tictactoe_crystal_lib.cr
tictactoe_csharp/: .gitignore  tictactoe.cs  tictactoe_csharp.csproj  tictactoe_csharp.sln
tictactoe_csharp/Tictactoe.Lib/: Tictactoe.Lib.cs  Tictactoe.Lib.csproj
tictactoe_csharp/Tictactoe.Prog/: Tictactoe.Prog.cs  Tictactoe.Prog.csproj
tictactoe_csharp/Tictactoe.Tests/: Tictactoe.Tests.csproj  Tictactoe_BestMoveShould.cs  Tictactoe_SwapPlayerShould.cs
tictactoe_d/: .gitignore  dub.sdl
tictactoe_d/source/: app.d  game.d
tictactoe_dart/: README.md  analysis_options.yaml  pubspec.yaml
tictactoe_dart/lib/: main.dart
tictactoe_dart/linux/: CMakeLists.txt  my_application.cc
tictactoe_dart/test/: game_logic_test.dart  widget_test.dart
tictactoe_dart/web/: index.html  manifest.json
tictactoe_dart/windows/: CMakeLists.txt
tictactoe_dreamberd/: simulate_key_presses.py  tictactoe.db
tictactoe_eiffel/: .gitignore  loadpath.se  tictactoe.e
tictactoe_eiffel/src/: loadpath.se  tictactoe.e
tictactoe_eiffel/tests/: loadpath.se  test_ai_player.e
tictactoe_elixir/: .gitignore  README.md  mix.exs
tictactoe_elixir/lib/: tictactoe_app.ex  tictactoe_elixir.ex
tictactoe_elm/: .gitignore  elm.json
tictactoe_erlang/: tictactoe.erl  tictactoe.escript
tictactoe_fortran/: .gitignore  Makefile  input1.txt  input2.txt
tictactoe_fsharp/: Program.fs
tictactoe_generic/: tictactoe_generic.gen
tictactoe_go/: go.mod  tictactoe_go.go  tictactoe_go_test.go
tictactoe_haskell/: CHANGELOG.md  LICENSE  tictactoe-haskell.cabal  tictactoe_haskell.cabal
tictactoe_intercal/: input1.txt  input2.txt  intercal_operators.py  tictactoe.i
tictactoe_java/: TicTacToeJava.java  my_checkstyle_config.xml  package-info.java  pom.xml
tictactoe_javascript/: index.html  script.js  style.css
tictactoe_julia/: Project.toml
tictactoe_kotlin/: build.gradle  settings.gradle
tictactoe_lua/: main.lua  tictactoe_lua.lua
tictactoe_mojo/: .gitignore  main.mojo  main.🔥  mojoproject.toml  pixi.toml
tictactoe_nim/: tictactoe_nim.nimble
tictactoe_nix/: tictactoe.nix
tictactoe_pascal/: tictactoe.lpi  tictactoe.lpr  tictactoe.lps
tictactoe_perl/: LibTictactoe.pm  test_tictactoe.pl  tictactoe.pl
tictactoe_piet/: .gitignore  PietLogic.txt
tictactoe_prolog/: tictactoe_prolog.pl  tictactoe_prolog_test.pl
tictactoe_python/: .pre-commit-config.yaml  __init__.py  pyproject.toml  requirements.txt  setup.cfg  tictactoe_python.py
tictactoe_python/tests/: __init__.py  conftest.py  requirements.txt  test_tictactoe.py
tictactoe_python/tictactoe/: __init__.py  tictactoe_python.py
tictactoe_ruby/: .rubocop.yml  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  ri20min.rb  tictactoe_ruby.gemspec
tictactoe_rust/: Cargo.toml
tictactoe_rust/tictactoe_rust/: Cargo.toml
tictactoe_rust/tictactoe_rust/src/: lib.rs  main.rs
tictactoe_rust/tictactoe_rust_python/: Cargo.toml  pyproject.toml  tictactoe_rust_python.pyi
tictactoe_rust/tictactoe_rust_python/src/: lib.rs
tictactoe_rust/tictactoe_rust_python/tests/: run_game.py
tictactoe_scratch/: TicTacToe-scratch.sb3
tictactoe_shakespeare/: tictactoe.spl
tictactoe_smalltalk/: .gitignore  .smalltalk.ston
tictactoe_swift/: Package.swift
tictactoe_tcl/: tictactoe.tcl
tictactoe_turnstyle/: tictactoe.txt
tictactoe_wasm/: index.html  tictactoe_wasm.wasm  tictactoe_wasm.wat  tictactoe_wasm_to_wat.wat
tictactoe_zig/: build.zig  input1.txt  input2.txt  input3.txt  input4.txt  main.zig
(+121 files in other folders)
