[package]
name = "tictactoe_rust"
version = "0.1.0"
edition = "2021"
authors     = ["Jan-Eric <janericnitschke@gmail.com"]
description = "A simple tictactoe game in rust."
readme      = "README.md"
repository  = "https://github.com/JanEricNitschke/TicTacToe/tree/main/tictactoe_rust"
license     = "MIT"
keywords    = ["cli", "game"]
categories  = ["Games"]
publish     = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
scan-rules = "0.2.0"
