[package]
name = "tictactoe_rust_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tictactoe_rust_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module"] }
tictactoe_rust = { path = "../tictactoe_rust" }
