[package]
name = "tictactoe_rust_python"
version = "0.1.0"
edition = "2024"
authors     = ["Jan-Eric <janericnitschke@gmail.com"]
description = "A simple tictactoe game in rust for python."
repository  = "https://github.com/JanEricNitschke/TicTacToe/tree/main/tictactoe_rust"
license     = "MIT"
keywords    = ["cli", "game"]
categories  = ["Games"]
publish     = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tictactoe_rust_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
tictactoe_rust = { path = "../tictactoe_rust" }
